crates/nrz/tests/snapshots/query__basic_monorepo_get_package_that_doesn't_exist_(npm@10.5.0).snap
---
source: crates/nrz/tests/query.rs
expression: query_output
---
{
  "data": null,
  "errors": [
    {
      "message": "Package not found: doesnotexist",
      "locations": [
        {
          "line": 1,
          "column": 9
        }
      ],
      "path": [
        "package"
      ]
    }
  ]
}
