crates/nrz/tests/snapshots/query__nrz_trace_get_`button.tsx`_with_dependents_(npm@10.5.0).snap
---
source: crates/nrz/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "button.tsx",
      "dependents": {
        "files": {
          "items": [
            {
              "path": "invalid.ts"
            },
            {
              "path": "main.ts"
            }
          ]
        }
      }
    }
  }
}
