crates/nrz/tests/snapshots/query__nrz_trace_get_`import_value_and_type.ts`_with_type_dependencies_(npm@10.5.0).snap
---
source: crates/nrz/tests/query.rs
expression: query_output
---
{
  "data": {
    "file": {
      "path": "import_value_and_type.ts",
      "dependencies": {
        "files": {
          "items": [
            {
              "path": "types.ts"
            }
          ]
        }
      }
    }
  }
}
